--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "nvm": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1"
   }
 }
